# terminal-finances

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  README.md  accountslist.h  filesave.h  initial.h  model.h  start.cpp  structure.md  terminal-finances.desktop  terminalfinances.cpp  terminalfinances.ui  updatefields.ui
.github/: CODE-OF-CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feedback.md  submit-a-request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md
src/: CMakeLists.txt  TerminalFinances.pro  accountslist.cpp  accountslist.h  filesave.cpp  filesave.h  gendoc.cpp  gendoc.h  initial.cpp  initial.h  main.cpp  model.cpp  model.h  start.cpp  start.h  terminalfinances.cpp  terminalfinances.h  terminalfinances.ui  tools.cpp  tools.h  updatefields.cpp  updatefields.h  updatefields.ui  views.cpp  views.h
src/assets/: images.qrc
src/terminalfinances/: TerminalFinances_en_US.qm  TerminalFinances_es_ES.ts  terminalfinances.db
terminalfinances/: TerminalFinances_en_US.ts  TerminalFinances_es_ES.qm
